[package]
name = "if_os"
version = "0.1.0"
authors = ["José Gilberto <medeiros.gilberto.br@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# O profile usado no `cargo build`
[profile.dev]
panic = "abort" # desabilita stack unwinding em caso de pânico

# O profile usado no `cargo build --release`
[profile.release]
panic = "abort" # desabilita stack unwinding em caso de pânico
